small fix in hannet.py to allow for one electron systems

--- a/notebooks/dev-zs.ipynb
+++ b/notebooks/dev-zs.ipynb
@@ -62,6 +62,7 @@
     "from dlqmc.nn import *\n",
     "from dlqmc.sampling import langevin_monte_carlo, hmc ,samples_from\n",
     "from dlqmc.fit import *\n",
+    "from dlqmc.nn.anti import *\n",
     "#from dlqmc.utils import assign_where\n",
     "from dlqmc.physics import (\n",
     "    local_energy, grad, quantum_force,nuclear_potential,\n",
@@ -92,11 +93,9 @@
    "outputs": [],
    "source": [
     "class Net_pair(nn.Module):\n",
-    "    def __init__(self,geom,n_dist_feats=32):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.dist_basis = DistanceBasis(n_dist_feats)\n",
-    "        self.register_buffer('coords', geom.coords)\n",
-    "        self.register_buffer('charges', geom.charges)\n",
+    "\n",
     "        self.NN1=nn.Sequential(\n",
     "            torch.nn.Linear(6, 10),\n",
     "            SSP(),\n",
@@ -107,7 +106,7 @@
     "        \n",
     "    def forward(self,x1,x2):\n",
     "        d=torch.cat((x1,x2),dim=-1)\n",
-    "        return self.NN1(d).view(-1,10)\n",
+    "        return self.NN1(d)\n",
     "    \n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
@@ -122,7 +121,6 @@
     "            #nn.Sigmoid())\n",
     "        \n",
     "    def forward(self,x):\n",
-    "        \n",
     "        return torch.sigmoid(self.NN1(x).flatten())\n",
     "\n",
     "    \n",
@@ -182,15 +180,8 @@
    "outputs": [],
    "source": [
     "h2p = geomdb['H2+']\n",
-    "h2 = geomdb['H2']\n"
+    "h2 = geomdb['H2']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -207,8 +198,8 @@
    "source": [
     "mol = gto.M(\n",
     "    atom=[\n",
-    "        ['H', (-0.742, 0, 0)],\n",
-    "        ['H', (0.742, 0, 0)]\n",
+    "        ['H', (0, 0, 0)],\n",
+    "        ['H', (1.484, 0, 0)]\n",
     "    ],\n",
     "    unit='bohr',\n",
     "    basis='4-31G',\n",
@@ -254,7 +245,7 @@
     "molecule = h2\n",
     "\n",
     "Onet = Net().cuda()\n",
-    "Pnet = Net_pair(molecule).cuda()\n",
+    "Pnet = Net_pair().cuda()\n",
     "net = WFNetAnti(molecule,n_electrons,Onet,Pnet,ion_pot=0.7).cuda()\n",
     "\n",
     "L = []\n",
@@ -268,7 +259,7 @@
     "t_start=time.time()\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(opt, step_size=1, gamma=0.999)\n",
     "\n",
-    "steps = 2000\n",
+    "steps = 200\n",
     "batchsize = 50_000\n",
     "n_resamplings = 100\n",
     "n_walker = 1_000\n",
@@ -310,9 +301,7 @@
     "    loss.backward()\n",
     "    L.append(loss.cpu().detach().numpy())\n",
     "    #V.append(((E_loc**2-E_loc.mean()**2).mean()).cpu().detach().numpy())\n",
-    "    \n",
-    "    torch.nn.utils.clip_grad_norm_(net.parameters(),1000)\n",
-    "    \n",
+    "        \n",
     "    opt.step()\n",
     "    opt.zero_grad()\n",
     "    \n",
@@ -328,6 +317,7 @@
    "outputs": [],
    "source": [
     "x_line = torch.cat((torch.linspace(-5, 5, 5000)[:, None], torch.zeros((5000, 3*n_electrons-1))), dim=1)\n",
+    "x_line[:,3] = 1.484/2\n",
     "x_line=x_line.view(-1,n_electrons,3).cuda()\n",
     "x_line.requires_grad = True\n",
     "net.cuda()\n",
@@ -347,7 +337,7 @@
     "#plt.ylim(-1,2)\n",
     "x_line.requires_grad = False\n",
     "plt.legend()\n",
-    "plt.savefig('lastrunwf.png')\n",
+    "#plt.savefig('lastrunwf.png')\n",
     "plt.show()\n",
     "plt.subplot2grid((2,1),(0,0))\n",
     "plt.plot(L[:steps//10])\n",
@@ -355,7 +345,7 @@
     "plt.subplot2grid((2,1),(1,0))\n",
     "plt.plot(L[steps//10:])\n",
     "plt.yscale('log')\n",
-    "plt.savefig('lastrunloss.png')\n"
+    "#plt.savefig('lastrunloss.png')\n"
    ]
   },
   {
@@ -473,7 +463,7 @@
     "    )\n",
     "else:\n",
     "    sampler = langevin_monte_carlo(\n",
-    "        net,\n",
+    "        gtowf,\n",
     "        torch.randn(1000, n_electrons, 3, device='cuda'),\n",
     "        tau=0.1,\n",
     "    )"
@@ -496,15 +486,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "D=[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "molecule = h2\n",
     "fit_wfnet(\n",
     "    net,\n",
@@ -514,31 +495,35 @@
     "            sampler,\n",
     "            samplings=range(1),\n",
     "            n_epochs=1,\n",
-    "            n_sampling_steps=250,\n",
+    "            n_sampling_steps=100,\n",
     "            batch_size=1_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
     "        ),\n",
-    "        writer = SummaryWriter(f'runs/'),\n",
+    "    clip_grad = None,\n",
+    "    exclude_below = 0,\n",
+    "    writer = SummaryWriter(f'runs/'),\n",
     "    )\n",
+    "\n",
     "fit_wfnet(\n",
-    "    net,\n",
+    "    net2,\n",
     "    partial(loss_local_energy, E_ref=None,p=1),\n",
     "    torch.optim.Adam(net.parameters(), lr=1e-3),\n",
     "    wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=range(1),\n",
-    "            n_epochs=3,\n",
-    "            n_sampling_steps=850,\n",
+    "            n_epochs=1,\n",
+    "            n_sampling_steps=1000,\n",
     "            batch_size=1_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
     "        ),\n",
-    "    clip_grad = 0.1,\n",
+    "    clip_grad = None,\n",
     "    writer = SummaryWriter(f'runs/'),\n",
-    "    )"
+    "    )\n",
+    "\n"
    ]
   },
   {
@@ -549,19 +534,19 @@
    "source": [
     "x_line = torch.cat((torch.linspace(-5, 5, 5000)[:, None], torch.zeros((5000, 3*n_electrons-1))), dim=1)\n",
     "x_line[:,3]=h2.coords[1][0]/2\n",
-    "x_line=x_line.view(-1,n_electrons,3).cuda()\n",
+    "x_line=x_line.view(-1,n_electrons,3)#.cuda()\n",
     "x_line.requires_grad = True\n",
-    "net.cuda()\n",
-    "#f_line = net._featurize(x_line)\n",
+    "gtowf\n",
+    "\n",
     "normed=True\n",
     "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), torch.exp(net.deep_lin(f_line[0])).squeeze().cpu().detach().numpy(),label=\"sym\",norm=normed)\n",
     "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), net.antisym(x_line).cpu().detach().numpy(),label=\"anti\",norm=normed)\n",
     "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), net.nuc_asymp(f_line[1][0]).cpu().detach().numpy(),label=\"asym\",norm=normed)\n",
     "#N = net.nuc_asymp(f_line[1][0]).cpu().detach().numpy()\n",
     "#normplot(x_line[:,0,0].cpu().detach().numpy(),-1*(N*x_line[:,0,0].cpu().detach().numpy()),label=\"asym*line\",norm=normed)\n",
-    "d=net(x_line).cpu().detach().numpy()\n",
-    "D.append(d)\n",
-    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
+    "#d=net(x_line).cpu().detach().numpy()\n",
+    "#D.append(d)\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), gtowf(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
     "\n",
     "plt.axhline(0,ls=':',color='k')\n",
     "plt.axvline(0,ls=':',color='k')\n",
@@ -578,17 +563,6 @@
     "#plt.plot(L[steps//10:])\n",
     "#plt.yscale('log')\n",
     "#plt.savefig('lastrunloss.png')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for d in D:\n",
-    "    plt.plot(d)\n",
-    "    #plt.savefig('hmm.png')"
    ]
   },
   {
@@ -633,7 +607,7 @@
     "    samples[:,0, 0].cpu().detach().numpy(),\n",
     "    samples[:,0, 1].cpu().detach().numpy(),\n",
     "    bins=100,\n",
-    "    range=[[-3, 3], [-3, 3]],\n",
+    "    range=[[-3, 3+h2.coords[1,0].cpu().numpy()], [-3, 3]],\n",
     ")                                   \n",
     "plt.gca().set_aspect(1)"
    ]
@@ -657,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_loc = dlqmc.utils.batch_eval_tuple(partial(local_energy, wf=lambda x: net(x),geom=h2),1000,samples.view([-1,n_electrons,3]))[0]"
+    "E_loc = dlqmc.utils.batch_eval_tuple(partial(local_energy, wf=lambda x: net(x),geom=h2),tqdm(samples.view([-1,n_electrons,3]).split(1000)))[0]"
    ]
   },
   {
@@ -709,10 +683,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.cuda.memory_allocated()\n",
-    "torch.cuda.memory_cached(device=None)\n",
-    "torch.cuda.max_memory_cached(device=None)\n",
+    "print(torch.cuda.memory_allocated())\n",
+    "print(torch.cuda.memory_cached(device=None))\n",
+    "print(torch.cuda.max_memory_cached(device=None))\n",
     "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H_{10}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d=1.5#1.786\n",
+    "n=2\n",
+    "hn = Geometry([[d*i, 0., 0.] for i in range(n)], [1. for i in range (n)])\n",
+    "print(hn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=[\n",
+    "        ['H', (d*i, 0, 0)] for i in range(n)      \n",
+    "    ],\n",
+    "    unit='bohr',\n",
+    "    basis='6-31G',#'aug-cc-pV5Z',\n",
+    "    charge=0,\n",
+    "    spin=0,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n",
+    "gtowf = TorchGTOSlaterWF(mf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_electrons=n\n",
+    "n_up = n//2\n",
+    "n_down = n_electrons-n_up\n",
+    "net = HanNet(hn,n_up,n_down, \n",
+    "        basis_dim=8,\n",
+    "        kernel_dim=16,\n",
+    "        embedding_dim=32,\n",
+    "        latent_dim=5,\n",
+    "        n_interactions=2,\n",
+    "        n_orbital_layers=3,).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if False:\n",
+    "    sampler = hmc(\n",
+    "        net,\n",
+    "        torch.randn(1000, n_electrons, 3, device='cuda'),\n",
+    "        dysteps=3,\n",
+    "        stepsize=0.2,\n",
+    "        tau = 0.1,\n",
+    "        cutoff = 1.0\n",
+    "    )\n",
+    "else:\n",
+    "    sampler = langevin_monte_carlo(\n",
+    "        net,\n",
+    "        torch.randn(1000, n_electrons, 3, device='cuda'),\n",
+    "        tau=0.1,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule = hn\n",
+    "fit_wfnet(\n",
+    "    net,\n",
+    "    partial(loss_local_energy, E_ref=-1.1,p=2),\n",
+    "    torch.optim.Adam(net.parameters(), lr=1e-3),\n",
+    "    wfnet_fit_driver(\n",
+    "            sampler,\n",
+    "            samplings=range(1),\n",
+    "            n_epochs=1,\n",
+    "            n_sampling_steps=60,\n",
+    "            batch_size=1_000,\n",
+    "            n_discard=50,\n",
+    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "            range_training=partial(trange, desc='training steps', leave=False),\n",
+    "        ),\n",
+    "    clip_grad = None,\n",
+    "    writer = SummaryWriter(f'runs/'),\n",
+    "    )\n",
+    "\n",
+    "fit_wfnet(\n",
+    "    net,\n",
+    "    partial(loss_local_energy, E_ref=None,p=1),\n",
+    "    torch.optim.Adam(net.parameters(), lr=1e-3),\n",
+    "    wfnet_fit_driver(\n",
+    "            sampler,\n",
+    "            samplings=range(1),\n",
+    "            n_epochs=1,\n",
+    "            n_sampling_steps=60,\n",
+    "            batch_size=1_000,\n",
+    "            n_discard=50,\n",
+    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "            range_training=partial(trange, desc='training steps', leave=False),\n",
+    "        ),\n",
+    "    clip_grad = None,\n",
+    "    writer = SummaryWriter(f'runs/'),\n",
+    "    )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_line = torch.cat((torch.linspace(-1, 16, 500)[:, None], torch.zeros((500, 3*n_electrons-1))), dim=1)\n",
+    "for i in range(n_electrons-1):\n",
+    "    x_line[:,3*(i+1)]=0.7*(i+1)\n",
+    "x_line=x_line.view(-1,n_electrons,3).cuda()\n",
+    "print(x_line.shape)\n",
+    "x_line.requires_grad = True\n",
+    "net.cuda()\n",
+    "\n",
+    "normed=True\n",
+    "#normplot(x_line[:,0 , 0].cpu().detach().numpy(), net(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), gtowf(x_line).cpu().detach().numpy(),label=\"WF\",norm=normed,lw=2,color='k')\n",
+    "\n",
+    "plt.axhline(0,ls=':',color='k')\n",
+    "for i in range(n):\n",
+    "    plt.axvline(d*i,ls=':',color='k')\n",
+    "\n",
+    "#plt.ylim(-1,2)\n",
+    "x_line.requires_grad = False\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
