update jh notebook

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "from itertools import repeat, product\n",
     "from functools import partial\n",
     "\n",
     "import numpy as np\n",
@@ -32,18 +33,36 @@
     "from scipy import special\n",
     "import torch\n",
     "from torch import nn\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "import pyscf\n",
-    "from pyscf import gto, scf\n",
+    "from pyscf import gto, scf, dft\n",
     "from tqdm.auto import tqdm, trange\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
-    "%aimport dlqmc.nn.base\n",
-    "from dlqmc.nn import WFNet, HanNet, DistanceBasis\n",
-    "from dlqmc.fit import fit_wfnet_multi, loss_local_energy, wfnet_fit_driver\n",
+    "from dlqmc.nn import (\n",
+    "    WFNet,\n",
+    "    HanNet,\n",
+    "    HFNet,\n",
+    "    DistanceBasis,\n",
+    "    GTOBasis,\n",
+    "    get_custom_dnn,\n",
+    "    get_log_dnn,\n",
+    "    SSP,\n",
+    "    pairwise_distance,\n",
+    "    pairwise_self_distance,\n",
+    "    Identity\n",
+    ")\n",
+    "from dlqmc.fit import (\n",
+    "    fit_wfnet,\n",
+    "    fit_wfnet_multi,\n",
+    "    loss_local_energy,\n",
+    "    wfnet_fit_driver,\n",
+    "    wfnet_fit_driver_simple,\n",
+    ")\n",
     "from dlqmc.sampling import samples_from, langevin_monte_carlo\n",
     "from dlqmc.physics import local_energy\n",
-    "from dlqmc.gto import TorchGTOSlaterWF, electron_density_of\n",
-    "from dlqmc.analysis import autocorr_coeff, blocking\n",
+    "from dlqmc.pyscfext import electron_density_of\n",
+    "from dlqmc.analysis import autocorr_coeff, blocking, pair_correlations_from_samples\n",
     "from dlqmc.geom import Geometry, angstrom, geomdb\n",
     "from dlqmc.utils import (\n",
     "    plot_func,\n",
@@ -52,10 +71,21 @@
     "    integrate_on_mesh,\n",
     "    batch_eval_tuple,\n",
     "    number_of_parameters,\n",
+    "    DebugContainer,\n",
+    "    shuffle_tensor,\n",
+    "    pow_int,\n",
     ")\n",
     "from dlqmc.stats import GaussianKDEstimator\n",
-    "import dlqmc.torchext as torchext\n",
-    "\n",
+    "from dlqmc import torchext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# needs to be in a separate cell, see https://github.com/ipython/ipython/issues/11098\n",
     "mpl.rcParams['figure.dpi'] = 100"
    ]
   },
@@ -89,7 +119,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy_big = mf.kernel()\n",
-    "gtowf_big = TorchGTOSlaterWF(mf).cuda()"
+    "gtowf_big = HFNet.from_pyscf(mf).cuda()"
    ]
   },
   {
@@ -108,7 +138,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
-    "gtowf = TorchGTOSlaterWF(mf).cuda()"
+    "gtowf = HFNet.from_pyscf(mf).cuda()"
    ]
   },
   {
@@ -117,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf.get_aos, [-7, 7], device='cuda');\n",
+    "plot_func_x(gtowf.basis, [-7, 7], device='cuda');\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -127,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf_big.get_aos, [-7, 7], device='cuda');\n",
+    "plot_func_x(gtowf_big.basis, [-7, 7], device='cuda');\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -137,8 +167,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_big)[0], [-3, 3], device='cuda', shift=1e-4)\n",
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], [-3, 3], device='cuda', shift=1e-10)\n",
+    "plot_func_x(gtowf_big.orbitals, [-7, 7], device='cuda');\n",
+    "plot_func_x(gtowf.orbitals, [-7, 7], device='cuda');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_big)[0], [-3, 3], device='cuda')\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], [-3, 3], device='cuda')\n",
     "plt.ylim((-10, 0));"
    ]
   },
@@ -247,8 +287,8 @@
    "source": [
     "n_walker = 1_000\n",
     "sampler = langevin_monte_carlo(\n",
-    "    gtowf_big.double(),\n",
-    "    torch.randn(n_walker, 1, 3).double().cuda(),\n",
+    "    gtowf_big,\n",
+    "    torch.randn(n_walker, 1, 3).cuda(),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs, psis, info = samples_from(sampler, trange(500))\n",
@@ -362,6 +402,8 @@
     "    torch.randn(1_000, 1, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
+    "for _ in range(50):\n",
+    "    next(sampler)\n",
     "wfnet"
    ]
   },
@@ -536,7 +578,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
-    "gtowf = TorchGTOSlaterWF(mf).cuda()"
+    "gtowf = HFNet.from_pyscf(mf).cuda()"
    ]
   },
   {
@@ -773,20 +815,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
-    "samples0 = (rs_flat0[:, 0] - rs_flat0[:, 1]).norm(dim=-1)\n",
-    "radial_pair = GaussianKDEstimator(\n",
-    "    samples[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
-    ")\n",
-    "radial_pair0 = GaussianKDEstimator(\n",
-    "    samples0[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
-    ")\n",
-    "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
-    "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
+    "pair = pair_correlations_from_samples(rs_flat, 1)\n",
+    "pair0 = pair_correlations_from_samples(rs_flat0, 1)\n",
+    "plot_func(lambda r: pair0['ud'](r[:, None])/pair['decorr'](r[:, None]), (0, 5), device='cuda');\n",
+    "plot_func(lambda r: pair['ud'](r[:, None])/pair['decorr'](r[:, None]), (0, 5), device='cuda');"
    ]
   },
   {
@@ -963,20 +995,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
-    "samples0 = (rs_flat0[:, 0] - rs_flat0[:, 1]).norm(dim=-1)\n",
-    "radial_pair = GaussianKDEstimator(\n",
-    "    samples[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
-    ")\n",
-    "radial_pair0 = GaussianKDEstimator(\n",
-    "    samples0[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
-    ")\n",
-    "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
-    "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
+    "pair = pair_correlations_from_samples(rs_flat, 1)\n",
+    "pair0 = pair_correlations_from_samples(rs_flat0, 1)\n",
+    "plot_func(lambda r: pair0['ud'](r[:, None])/pair['decorr'](r[:, None]), (0, 5), device='cuda');\n",
+    "plot_func(lambda r: pair['ud'](r[:, None])/pair['decorr'](r[:, None]), (0, 5), device='cuda');"
    ]
   },
   {
@@ -1027,7 +1049,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
-    "gtowf = TorchGTOSlaterWF(mf).cuda()"
+    "gtowf = HFNet.from_pyscf(mf).cuda()"
    ]
   },
   {
@@ -1155,8 +1177,7 @@
     "    wfnet,\n",
     "    torch.randn(1_000, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
-    ")\n",
-    "wfnet"
+    ")"
    ]
   },
   {
@@ -1168,22 +1189,18 @@
     "fit_wfnet_multi(\n",
     "    wfnet,\n",
     "    (partial(loss_local_energy, E_ref=-0.8), loss_local_energy),\n",
-    "    (torch.optim.Adam(wfnet.parameters(), lr=2e-3) for _ in range(2)),\n",
+    "    (torch.optim.Adam(wfnet.parameters(), lr=0.006) for _ in range(2)),\n",
     "    partial(\n",
-    "        wfnet_fit_driver,\n",
+    "        wfnet_fit_driver_simple,\n",
     "        sampler,\n",
-    "        n_epochs=1,\n",
-    "        n_sampling_steps=300,\n",
-    "        n_discard=50,\n",
-    "        range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
-    "        range_training=partial(trange, desc='training steps', leave=False),\n",
+    "        n_sampling_steps=5,\n",
     "    ),\n",
     "    (\n",
-    "        {'samplings': trange(3, desc='samplings'), 'batch_size': 5_000},\n",
-    "        {'samplings': trange(10, desc='samplings'), 'batch_size': 2_000},\n",
+    "        {'samplings': trange(200, desc='samplings')},\n",
+    "        {'samplings': trange(2000, desc='samplings')},\n",
     "    ),\n",
-    "    (SummaryWriter(f'runs/H2t/hannet/01/{s}') for s in ['pretrain', 'variance']),\n",
-    ")"
+    "    (SummaryWriter(f'runs/H2t/hannet/05/{s}') for s in ['pretrain', 'variance']),\n",
+    ")\n"
    ]
   },
   {
