--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -1240,20 +1240,276 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
-    "samples0 = (rs_flat0[:, 0] - rs_flat0[:, 1]).norm(dim=-1)\n",
-    "radial_pair = GaussianKDEstimator(\n",
-    "    samples[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
+    "pair = pair_correlations_from_samples(rs_flat, 1)\n",
+    "pair0 = pair_correlations_from_samples(rs_flat0, 1)\n",
+    "plot_func(\n",
+    "    lambda r: pair0['ud'](r[:, None]) / pair['decorr'](r[:, None]),\n",
+    "    (0, 5),\n",
+    "    device='cuda',\n",
     ")\n",
-    "radial_pair0 = GaussianKDEstimator(\n",
-    "    samples0[:, None],\n",
-    "    bw=0.01,\n",
-    "    weights=1/samples**2\n",
+    "plot_func(\n",
+    "    lambda r: pair['ud'](r[:, None]) / pair['decorr'](r[:, None]), (0, 5), device='cuda'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LiH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GTO WF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=geomdb['LiH'].as_pyscf(),\n",
+    "    unit='bohr',\n",
+    "    basis='6-311g',\n",
+    "    charge=0,\n",
+    "    spin=0,\n",
+    "    cart=True,\n",
     ")\n",
-    "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
-    "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
+    "mf = scf.RHF(mol)\n",
+    "scf_energy = mf.kernel()\n",
+    "gtowf = HFNet.from_pyscf(mf).cuda()\n",
+    "mf.mo_energy[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 1_000\n",
+    "sampler = langevin_monte_carlo(gtowf, torch.randn(n_walker, 4, 3).cuda(), tau=0.1)\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = batch_eval_tuple(\n",
+    "    local_energy, tqdm(rs.flatten(end_dim=1).split(50_000)), gtowf\n",
+    ")[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
+    "plt.ylim(-8.5, -7.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plt.hist(E_loc[:, 100:].flatten().clamp(-11, -3).cpu().numpy(), bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc[:, 100:].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scf_energy, E_loc[:, 100:].mean().item(), (\n",
+    "    E_loc[:, 100:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])\n",
+    ").item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(blocking(E_loc[:, 100:]).numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(autocorr_coeff(range(50), E_loc[:, 100:]).numpy())\n",
+    "plt.axhline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs_hf_flat = rs[:, 50:].flatten(end_dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = GaussianKDEstimator(rs_hf_flat.flatten(end_dim=1), bw=0.05, weights=4)\n",
+    "plot_func_x(density, [-2, 5], device='cuda')\n",
+    "plot_func_x(gtowf.density, [-2, 5], device='cuda')\n",
+    "plt.gca().set_yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_func_x(gtowf.orbitals, [-2, 5], device='cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pair = pair_correlations_from_samples(rs_hf_flat, 2)\n",
+    "plot_func(\n",
+    "    lambda r: pair['uu'](r[:, None]) / pair['decorr'](r[:, None]), (0, 8), device='cuda'\n",
+    ")\n",
+    "plot_func(\n",
+    "    lambda r: pair['dd'](r[:, None]) / pair['decorr'](r[:, None]), (0, 8), device='cuda'\n",
+    ")\n",
+    "plot_func(\n",
+    "    lambda r: pair['ud'](r[:, None]) / pair['decorr'](r[:, None]), (0, 8), device='cuda'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
+    "axes[0].hist(rs_hf_flat[..., 0].flatten().cpu().numpy(), bins=100, range=[-2, 5])\n",
+    "for idx, ax in zip([(0, 2), (0, 1)], axes[1:]):\n",
+    "    ax.hist2d(\n",
+    "        *rs_hf_flat[:, idx, 0].cpu().numpy().T, bins=100, range=[[-2, 5], [-2, 5]]\n",
+    "    )\n",
+    "    ax.set_aspect(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GTO WF training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=geomdb['LiH'].as_pyscf(),\n",
+    "    unit='bohr',\n",
+    "    basis='6-311g',\n",
+    "    charge=0,\n",
+    "    spin=0,\n",
+    "    cart=True,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n",
+    "wfnet = HFNet(geomdb['LiH'], 2, 2, GTOBasis.from_pyscf(mol)).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = langevin_monte_carlo(wfnet, torch.randn(1_000, 4, 3, device='cuda'), tau=0.1)\n",
+    "for _ in range(200):\n",
+    "    next(sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "debug = DebugContainer()\n",
+    "with SummaryWriter('runs/LiH/gtowf/18/pretrain') as writer:\n",
+    "    fit_wfnet(\n",
+    "        wfnet,\n",
+    "        partial(loss_local_energy, E_ref=-8),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=3e-3),\n",
+    "        wfnet_fit_driver_simple(sampler, n_sampling_steps=1, samplings=trange(2000)),\n",
+    "        writer=writer,\n",
+    "        debug=debug,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func_x(wfnet.orbitals, [-2, 5], device='cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 1_000\n",
+    "sampler = langevin_monte_carlo(wfnet, torch.randn(n_walker, 4, 3).cuda(), tau=0.1)\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = batch_eval_tuple(\n",
+    "    local_energy, tqdm(rs.flatten(end_dim=1).split(50_000)), wfnet\n",
+    ")[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc[:, 100:].mean().item(), (\n",
+    "    E_loc[:, 100:].mean(dim=1).std() / np.sqrt(E_loc.shape[0])\n",
+    ").item()"
    ]
   }
  ],
