--- a/notebooks/dev-zs.ipynb
+++ b/notebooks/dev-zs.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "from dlqmc.nn.base import * \n",
     "from dlqmc.geom import *\n",
-    "from dlqmc.gto import *\n",
+    "from dlqmc.nn.gto import *\n",
     "from dlqmc.nn import *\n",
     "from dlqmc.sampling import langevin_monte_carlo, hmc ,samples_from\n",
     "from dlqmc.fit import *\n",
@@ -71,6 +71,16 @@
     "#from dlqmc.analysis import autocorr_coeff, blocking\n",
     "from dlqmc.nn import ssp\n",
     "from dlqmc.nn.hannet import HanNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h2p = geomdb['H2+']\n",
+    "h2 = geomdb['H2']"
    ]
   },
   {
@@ -171,16 +181,6 @@
     "        xs, (dists_nuc, dists_el) = self._featurize(rs)\n",
     "        ys = self.deep_lin(xs).squeeze(dim=1)\n",
     "        return self.nuc_asymp(dists_nuc) * torch.exp(ys) * self.antisym(rs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h2p = geomdb['H2+']\n",
-    "h2 = geomdb['H2']"
    ]
   },
   {
@@ -840,6 +840,363 @@
     "x_line.requires_grad = False\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Backflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=[\n",
+    "        ['B', (0, 0, 0)]\n",
+    "    ],\n",
+    "    unit='bohr',\n",
+    "    basis='4-31G',\n",
+    "    cart=True,\n",
+    "    charge=0,\n",
+    "    spin=1,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bohr=geomdb['H']\n",
+    "bohr._coords=torch.tensor([[0,0,0.]])\n",
+    "bohr._charges=torch.tensor([5.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = gto.M(\n",
+    "    atom=[\n",
+    "        ['H', (0, 0, 0)],\n",
+    "        ['H', (1.484, 0, 0)]\n",
+    "    ],\n",
+    "    unit='bohr',\n",
+    "    basis='4-31G',\n",
+    "    cart=True,\n",
+    "    charge=0,\n",
+    "    spin=2,\n",
+    ")\n",
+    "mf = scf.RHF(mol)\n",
+    "mf.kernel()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dlqmc.utils import nondiag\n",
+    "\n",
+    "class Backflow(nn.Module):\n",
+    "      \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        n_up,\n",
+    "        n_down,\n",
+    "        n_interactions,\n",
+    "        basis_dim\n",
+    "    ):\n",
+    "            \n",
+    "        super().__init__()\n",
+    "        def interaction_factory(basis_dim):\n",
+    "                modules = {\n",
+    "                    'interact': get_log_dnn(basis_dim, 1, SSP, n_layers=4, last_bias=False),\n",
+    "                }\n",
+    "                return nn.ModuleDict(modules)\n",
+    "            \n",
+    "        self.interactions = nn.ModuleList(\n",
+    "            [\n",
+    "                interaction_factory(basis_dim)\n",
+    "                for _ in range(n_interactions)\n",
+    "            ])\n",
+    "        \n",
+    "        self.dist_basis = DistanceBasis(basis_dim)\n",
+    "            \n",
+    "    def forward(self,rs, debug=NULL_DEBUG):\n",
+    "        xs = rs.clone()\n",
+    "        for i, interaction in enumerate(self.interactions):\n",
+    "            dists_basis = self.dist_basis(pairwise_distance(xs,xs))\n",
+    "            *batch_dims, n_elec, n_elec, basis_dim = dists_basis.shape\n",
+    "            c_i, c_j, c_shape = self._conv_indexing(n_elec, n_elec, batch_dims)\n",
+    "            dists_basis = dists_basis[..., c_i, c_j, :]\n",
+    "            Ws = interaction.interact(dists_basis)\n",
+    "            zs = (Ws.view(*c_shape) * (xs[:, c_j].view(*c_shape)-xs[:,:,None,:])).sum(dim=2)\n",
+    "            xs = xs + zs\n",
+    "        return xs\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _conv_indexing(n_elec, n_all, batch_dims):\n",
+    "        i, j = np.mask_indices(n_all, nondiag)\n",
+    "        n = n_elec * (n_all - 1)\n",
+    "        i, j = i[:n], j[:n]\n",
+    "        shape = (*batch_dims, n_elec, n_all - 1, -1)\n",
+    "        return i, j, shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "from dlqmc.geom import Geometry\n",
+    "from dlqmc.utils import NULL_DEBUG\n",
+    "from dlqmc.nn.anti import eval_slater\n",
+    "from dlqmc.nn.base import BaseWFNet\n",
+    "from dlqmc.nn.base import DistanceBasis\n",
+    "from dlqmc.nn.gto import GTOBasis\n",
+    "\n",
+    "\n",
+    "class HFNet(BaseWFNet):\n",
+    "    def __init__(self, geom, n_up, n_down, basis, n_interactions):\n",
+    "        super().__init__()\n",
+    "        self.n_up, self.n_down = n_up, n_down\n",
+    "        self.register_geom(geom)\n",
+    "        self.basis = basis\n",
+    "        self.mo = nn.Linear(basis.dim, max(n_up, n_down), bias=False)\n",
+    "        self.backflow = Backflow(n_up, n_down,n_interactions,20)\n",
+    "\n",
+    "    def init_from_pyscf(self, mf):\n",
+    "        mo_coeff = mf.mo_coeff.copy()\n",
+    "        if mf.mol.cart:\n",
+    "            mo_coeff *= np.sqrt(np.diag(mf.mol.intor('int1e_ovlp_cart')))[:, None]\n",
+    "        self.mo.weight.detach().copy_(\n",
+    "            torch.from_numpy(mo_coeff[:, : max(self.n_up, self.n_down)].T)\n",
+    "        )\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_pyscf(cls, mf, n_interactions):\n",
+    "        n_up = (mf.mo_occ >= 1).sum()\n",
+    "        n_down = (mf.mo_occ == 2).sum()\n",
+    "        assert (mf.mo_occ[:n_down] == 2).all()\n",
+    "        assert (mf.mo_occ[n_down:n_up] == 1).all()\n",
+    "        assert (mf.mo_occ[n_up:] == 0).all()\n",
+    "        geom = Geometry(mf.mol.atom_coords().astype('float32'), mf.mol.atom_charges())\n",
+    "        basis = GTOBasis.from_pyscf(mf.mol)\n",
+    "        wf = cls(geom, n_up, n_down, basis, n_interactions)\n",
+    "        wf.init_from_pyscf(mf)\n",
+    "        return wf\n",
+    "\n",
+    "    def __call__(self, rs, debug=NULL_DEBUG):\n",
+    "        batch_dim, n_elec = rs.shape[:2]\n",
+    "        rs_back = self.backflow(rs)\n",
+    "        xs = debug['aos'] = self.basis(rs_back.flatten(end_dim=1)).view(\n",
+    "            batch_dim, n_elec, -1\n",
+    "        )\n",
+    "        xs = debug['slaters'] = self.mo(xs)\n",
+    "        det_up = debug['det_up'] = eval_slater(xs[:, : self.n_up, : self.n_up])\n",
+    "        det_down = debug['det_down'] = eval_slater(xs[:, self.n_up :, : self.n_down])\n",
+    "        return det_up * det_down\n",
+    "\n",
+    "    def orbitals(self, rs):\n",
+    "        return self.mo(self.basis(rs))\n",
+    "\n",
+    "    def density(self, rs):\n",
+    "        xs = self.orbitals(rs)\n",
+    "        return sum(\n",
+    "            (xs[:, :n_elec] ** 2).sum(dim=-1) for n_elec in (self.n_up, self.n_down)\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_electrons=2\n",
+    "n_up = 2\n",
+    "n_down = n_electrons-n_up\n",
+    "molecule = h2\n",
+    "\n",
+    "net0=HFNet.from_pyscf(mf,n_interactions=0).cuda()\n",
+    "net1=HFNet.from_pyscf(mf,n_interactions=1).cuda()\n",
+    "net3=HFNet.from_pyscf(mf,n_interactions=3).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler0 = langevin_monte_carlo(\n",
+    "    net0,\n",
+    "    torch.randn(1000, n_electrons, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "\n",
+    "sampler1 = langevin_monte_carlo(\n",
+    "    net1,\n",
+    "    torch.randn(1000, n_electrons, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "\n",
+    "sampler3 = langevin_monte_carlo(\n",
+    "    net3,\n",
+    "    torch.randn(1000, n_electrons, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for net,sampler in zip([net0,net1,net3],[sampler0,sampler1,sampler3]):\n",
+    "    fit_wfnet(\n",
+    "        net,\n",
+    "        partial(loss_local_energy, E_ref=-1.1,p=2),\n",
+    "        torch.optim.Adam(net.parameters(), lr=1e-3),\n",
+    "        wfnet_fit_driver(\n",
+    "                sampler,\n",
+    "                samplings=range(1),\n",
+    "                n_epochs=1,\n",
+    "                n_sampling_steps=100,\n",
+    "                batch_size=1_000,\n",
+    "                n_discard=50,\n",
+    "                range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "                range_training=partial(trange, desc='training steps', leave=False),\n",
+    "            ),\n",
+    "        clip_grad = None,\n",
+    "        writer = SummaryWriter(f'runs/'),\n",
+    "        )\n",
+    "\n",
+    "    fit_wfnet(\n",
+    "        net,\n",
+    "        partial(loss_local_energy, E_ref=None,p=1),\n",
+    "        torch.optim.Adam(net.parameters(), lr=1e-3),\n",
+    "        wfnet_fit_driver(\n",
+    "                sampler,\n",
+    "                samplings=range(1),\n",
+    "                n_epochs=1,\n",
+    "                n_sampling_steps=100,\n",
+    "                batch_size=1_000,\n",
+    "                n_discard=50,\n",
+    "                range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "                range_training=partial(trange, desc='training steps', leave=False),\n",
+    "            ),\n",
+    "        clip_grad = None,\n",
+    "        writer = SummaryWriter(f'runs/'),\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_line = torch.cat((torch.linspace(-5, 5, 500)[:, None], torch.zeros((500, 3*n_electrons-1))), dim=1)\n",
+    "x_line[:,3]=h2.coords[1][0]/2\n",
+    "x_line=x_line.view(-1,n_electrons,3).cuda()\n",
+    "x_line.requires_grad = True\n",
+    "\n",
+    "\n",
+    "normed=True\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net0(x_line).cpu().detach().numpy(),label=\"WF0\",norm=normed,lw=2)\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net1(x_line).cpu().detach().numpy(),label=\"WF1\",norm=normed,lw=2)\n",
+    "normplot(x_line[:,0 , 0].cpu().detach().numpy(), net3(x_line).cpu().detach().numpy(),label=\"WF3\",norm=normed,lw=2)\n",
+    "plt.axhline(0,ls=':',color='k')\n",
+    "plt.axvline(0,ls=':',color='k')\n",
+    "plt.axvline(0,ls=':',color='k')\n",
+    "x_line.requires_grad = False\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=0\n",
+    "for net,sampler in zip([net0,net1,net3],[sampler0,sampler1,sampler3]):\n",
+    "    i+=1\n",
+    "    t=time.time()\n",
+    "    samples = samples_from(sampler,range(100))[0].flatten(end_dim=1)\n",
+    "    print(\"it took: \"+str(time.time()-t))\n",
+    "    \n",
+    "    E_loc = dlqmc.utils.batch_eval_tuple(partial(local_energy, wf=lambda x: net(x),geom=net.geom),tqdm(samples.view([-1,n_electrons,3]).split(1000)))[0]\n",
+    "    E_loc = E_loc.clamp(-4, 1)\n",
+    "    mean=E_loc.mean().item()\n",
+    "    h = plt.hist(E_loc.detach().cpu().numpy(), bins=100,alpha = 0.5,label=(str(i)+\": mean = \"+str(np.round(mean,4))))\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=time.time()\n",
+    "samples = samples_from(sampler3,range(100))[0].flatten(end_dim=1)\n",
+    "print(\"it took: \"+str(time.time()-t))\n",
+    "    \n",
+    "plt.hist2d(\n",
+    "    samples[:,:, 0].cpu().flatten().detach().numpy(),\n",
+    "    samples[:,:, 1].cpu().flatten().detach().numpy(),\n",
+    "    bins=100,\n",
+    "    range=[[-1, 1], [-1, 1]],\n",
+    ")                                   \n",
+    "plt.gca().set_aspect(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc = dlqmc.utils.batch_eval_tuple(partial(local_energy, wf=lambda x: net0(x),geom=net0.geom),tqdm(samples.view([-1,n_electrons,3]).split(1000)))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean=np.round(E_loc.clamp(-40, 10).mean().item(),4)\n",
+    "var=np.round(np.var(E_loc.detach().clamp(-40, 10).cpu().numpy()),4)\n",
+    "\n",
+    "h = plt.hist(E_loc.detach().clamp(-40, 10).cpu().numpy(), bins=100,alpha = 0.5,color='b')\n",
+    "plt.annotate(\"mean = \"+str(mean),(-0.3,np.max(h[0])/2),color='b')\n",
+    "plt.annotate(\"var     = \"+str(var),(-0.3,np.max(h[0])/2-np.max(h[0])/15),color='b')\n",
+    "\n",
+    "plt.savefig('lastruneloc.png')\n",
+    "plt.show()"
    ]
   },
   {
